<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="60dp"
            android:hint="First Name" />

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="12dp"
            android:hint="Last Name" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="12dp"
            android:hint="Email Address"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="12dp"
            android:hint="Password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="12dp"
            android:hint="Phone Number"
            android:inputType="phone" />

        <EditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="12dp"
            android:hint="Address"
            android:inputType="textPostalAddress" />

        <RadioGroup
            android:id="@+id/rgUserType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbAttendee"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:checked="true"
                android:text="Attendee" />

            <RadioButton
                android:id="@+id/rbOrganizer"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="Organizer"
                android:layout_marginStart="15dp"/>
        </RadioGroup>

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="12dp"
            android:text="Sign Up" />

    </LinearLayout>
</ScrollView>