<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pending_application_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvPendingMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Your application is pending.\nYou will receive an email once a decision has been made."
        android:textSize="18sp"
        android:visibility="visible"
        android:textAlignment="center"
        android:gravity="center"/>

    <Button
        android:id="@+id/btnLogoff"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="Log Off"
        android:layout_gravity="center"/>

</LinearLayout>